deployments/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strato
  labels:
    app.kubernetes.io/name: strato
